logs/uberpong.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/bson-0.4.0.egg-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/lz4-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyglet'...
Listing './lib/python3.5/site-packages/pyglet/app'...
Listing './lib/python3.5/site-packages/pyglet/canvas'...
Listing './lib/python3.5/site-packages/pyglet/extlibs'...
Listing './lib/python3.5/site-packages/pyglet/font'...
Listing './lib/python3.5/site-packages/pyglet/gl'...
Listing './lib/python3.5/site-packages/pyglet/graphics'...
Listing './lib/python3.5/site-packages/pyglet/image'...
Listing './lib/python3.5/site-packages/pyglet/image/codecs'...
Listing './lib/python3.5/site-packages/pyglet/input'...
Listing './lib/python3.5/site-packages/pyglet/libs'...
Listing './lib/python3.5/site-packages/pyglet/libs/darwin'...
Listing './lib/python3.5/site-packages/pyglet/libs/darwin/cocoapy'...
Listing './lib/python3.5/site-packages/pyglet/libs/win32'...
Listing './lib/python3.5/site-packages/pyglet/libs/x11'...
Listing './lib/python3.5/site-packages/pyglet/media'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/directsound'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/openal'...
Listing './lib/python3.5/site-packages/pyglet/media/drivers/pulse'...
Listing './lib/python3.5/site-packages/pyglet/text'...
Listing './lib/python3.5/site-packages/pyglet/text/formats'...
Listing './lib/python3.5/site-packages/pyglet/window'...
Listing './lib/python3.5/site-packages/pyglet/window/carbon'...
Listing './lib/python3.5/site-packages/pyglet/window/cocoa'...
Listing './lib/python3.5/site-packages/pyglet/window/win32'...
Listing './lib/python3.5/site-packages/pyglet/window/xlib'...
Listing './lib/python3.5/site-packages/pyglet-1.2.3.dist-info'...
Listing './lib/python3.5/site-packages/pymunk'...
Compiling './lib/python3.5/site-packages/pymunk/pygame_util.py'...
***   File "./lib/python3.5/site-packages/pymunk/pygame_util.py", line 148
    print poly.radius
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pymunk-4.0.0.egg-info'...
Listing './lib/python3.5/site-packages/pymunkoptions'...
Listing './lib/python3.5/site-packages/pytz'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Africa'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Argentina'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Indiana'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/Kentucky'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/America/North_Dakota'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Antarctica'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Arctic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Asia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Atlantic'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Australia'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Brazil'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Canada'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Chile'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Etc'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Europe'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Indian'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Mexico'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/Pacific'...
Listing './lib/python3.5/site-packages/pytz/zoneinfo/US'...
Listing './lib/python3.5/site-packages/pytz-2017.3.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simpleubjson'...
Listing './lib/python3.5/site-packages/simpleubjson/tests'...
Listing './lib/python3.5/site-packages/simpleubjson/tools'...
Listing './lib/python3.5/site-packages/simpleubjson-0.7.0.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/uberpong'...
Listing './lib/python3.5/site-packages/uberpong/engine'...
Listing './lib/python3.5/site-packages/uberpong/game'...
Listing './lib/python3.5/site-packages/uberpong/game/entities'...
Listing './lib/python3.5/site-packages/uberpong/game/net'...
Listing './lib/python3.5/site-packages/uberpong/game/states'...
Listing './lib/python3.5/site-packages/uberpong/ming'...
Listing './lib/python3.5/site-packages/uberpong-0.1.0a1.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
Listing './share/uberpong'...
Listing './share/uberpong/assets'...
Listing './share/uberpong/assets/fonts'...
Listing './share/uberpong/assets/images'...
Listing './share/uberpong/assets/sounds'...
